--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -93,7 +93,7 @@
       items:
       - name: "Tools in the BTP software package"
         href: testing-BTP-software-package.md
-      - name: "Supported BTP hardware configurations"
+      - name: "Supported BTP hardware"
         href: testing-BTP-supported-hardware.md
       - name: "Setting up BTP"
         href: testing-BTP-setup.md
