--- a/windows-driver-docs-pr/cfu/toc.yml
+++ b/windows-driver-docs-pr/cfu/toc.yml
@@ -19,3 +19,5 @@
     href: cfu-standalone-tool-sample.md
   - name: "Component Firmware Update (CFU) specification"
     href: cfu-specification.md
+  - name: "Storage Firmware Update (SFU)"
+    href: storage-firmware-update-driver.md
