--- a/windows-driver-docs-pr/dashboard/toc.yml
+++ b/windows-driver-docs-pr/dashboard/toc.yml
@@ -83,6 +83,26 @@
             href: camera-photo-failure-rate.md
           - name: "Percent of Camera video and stream failures"
             href: camera-video-and-stream-failure-rate.md
+        - name: "Firmware"
+            items:
+              - name: "Firmware measures"
+                href: firmware-measures.md
+              - name: "Perent of machines reporting successful firmware installation from ESRT"
+                href: ESRT-pct-machines-reporting-successful-firmware-installation.md
+              - name: "Percent of machinces exceeded firmware max retry limit from ESRT"
+                href: ESRT-pct-machines-exceed-max-retry.md
+              - name: "Percent of machines with WHEA error after firmware installation"
+                href: ESRT-pct-machines-WHEA-error.md
+              - name: "Percent of machines with abnormal shutdown not due to bugcheck or power button"
+                href: ESRT-pct-machines-ABS.md
+              - name: "Percent of machines that successfully installed firmware and not heartbeat within 7 days"
+                href: ESRT-7-day-brick-detector.md
+              - name: "Percent of machines that successfully installed firmware and not heartbeat within 14 days"
+                href: ESRT-14-day-brick-detector.md
+              - name: "Percent of machines that installed firmware and was blocked by bitlocker"
+                href: ESRT-pct-machines-blocked-bitlocker.md
+              - name: "Percent of machines that installed firmware and entered bitlocker recovery"
+                href: ESRT-pct-machines-entered-bitlocker-recovery.md
         - name: "Graphics"
           items:
           - name: "Graphics measures"
